# FileEncrypt_Lite

./: Cargo.toml  README.md  build.rs  git.sh
src/: main.rs
