[package]
name = "secure_file_encryptor"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "secure_file_encryptor"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
directories = "5.0"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "1.0"
console = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true